# tesi

./: configurazione.cabal
Appunti/: Moduli.txt
HaskellGameDesign/: canvas.hs  guidaprogetto.txt
HaskellGameDesign/animated/: ChangeLog.md  animated.cabal  package.yaml
HaskellGameDesign/animated/app/: Main.hs
HaskellGameDesign/helloWindow/: ChangeLog.md  README.md  helloWindow.cabal  package.yaml  stack.yaml
HaskellGameDesign/shapes/: hie.yaml  package.yaml  shapes.cabal
HaskellGameDesign/state/: hie.yaml  package.yaml  stack.yaml  state.cabal
HaskellGameDesign/stateFRP/: ChangeLog.md  README.md  package.yaml  stateFRP.cabal
Introduzione ad Haskell/: Alberi.hs  FOLD.hs  baby.hs  functor.hs  guardie.hs  highorder.hs  lambda.hs  maps.hs  pattern.hs  persona(deprecated).hs  persona.hs  recursion.hs  recursivedatastructure.hs  tipiPersonal.hs  types.hs  vettore.hs  yesno.hs
Introduzione ad Haskell/Functors_Monads/: functors.hs
Introduzione ad Haskell/Input-Output/: capslocker.hi  capslocker.hs  commandLine.hs  deletetodo.hs  exceptions.hs  exceptions2.hs  girlfriend.hs  helloworld.hs  helloworld_2.hi  indovinello.hi  indovinello.hs  monete.hs  palindrome.hs  printshort.hi  printshort.hs  random_string.hs  reverse.hs  todo.hs  todo.txt
Introduzione ad Haskell/Moduli/: DataList.hs  yesno.hs
Introduzione ad Haskell/Problemi Funzionali/: path.txt  reversePolishNotation.hs  shortestPath.hs
elegantGame/: ChangeLog.md  README.md  elegantGame.cabal  package.yaml
elegantGame/app/: Main.hs
elegantGame/src/: Game.hs  Logic.hs  Rendering.hs
(+6 files in other folders)
