build-type:          Simple
cabal-version:       >=2.0

ghc-options:       -Wall
  build-depends:       base >= 4.8 && <=5
                     , GLFW-b >= 1.4.7.2
                     , text >= 1.2.1.1
                     , bytestring
                     , gloss >= 1.9.3.1
                     , gloss-rendering >= 1.9.3.1
  default-language:    Haskell2010
